--- a/app/globals.css
+++ b/app/globals.css
@@ -137,3 +137,11 @@
     background-size: 200% 200%;
   }
 }
+
+.scrollbar-none {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+}
+.scrollbar-none::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
